--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -2,6 +2,9 @@
     header {
         grid-template-columns: 1fr 2fr 3fr;
     }
+    h1 {
+        font-size: 1.25em;
+    }
     #menu {
         display: none; /*Hides hamburger button in large/desktop view*/
     }
@@ -12,16 +15,15 @@
         display: block;
         flex: 1 1 100%;
     }
+    nav a {
+        font-size: 1.25em;
+    }
     nav ul li{
         margin-left: 20px;
         list-style-type: none;
         font-family: 'Merriweather', Arial, 'Times New Roman';
     }
-    .navigation li a:hover {
-        /* background-color: ; */
-        color: white;
-        text-shadow: black 2px 2px 10px;
-    }
+
     #main-grid {
         width: 100%;
         display: grid;
@@ -37,5 +39,11 @@
         grid-column: 1/3;
     }
     
+    #document-info {
+        font-size: 1.2em;
+    }
+    #contact {
+        font-size: .9em;
+    }
 
 }
